# cppTemp

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: build.yml
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  tahir
src/: main.cpp
